plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

jarJar.enable()

minecraft {
    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.enabledGameTestNamespaces', mod_id

            // Adds the stand-in addon category so the addon path can be exercised in the dev
            // client. Nothing ships with it: without this property the demo never registers.
            property 'historystages.demoCategory', 'true'
        }

        server {
            // Its own directory, or the server and a client cannot run at the same time — which is
            // the entire point of a dedicated-server test.
            workingDirectory project.file('run-server-forge')
            property 'forge.enabledGameTestNamespaces', mod_id
            property 'historystages.demoCategory', 'true'
            args '--nogui'
        }

        // Runs every registered GameTest and exits. Vanilla refuses to start it with no tests at all.
        gameTestServer {
            workingDirectory project.file('run-gametest-forge')
            property 'forge.enabledGameTestNamespaces', mod_id
            property 'historystages.demoCategory', 'true'
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDirs += 'src/generated/resources' }

repositories {
    flatDir {
        dir 'libs'
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        url "https://cursemaven.com"
    }
    maven {
        url "https://api.modrinth.com/maven"
    }
    maven {
        name = "Curios"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "Jared's Maven"
        url = "https://maven.blamejared.com"
        content {
            includeGroup "com.blamejared.crafttweaker"
            includeGroup "org.openzen.zencode"
            includeGroup "com.faux.ingredientextension"
        }
    }
    maven {
        name = "Architectury"
        url = "https://maven.architectury.dev/"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        name = "KubeJS"
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
        }
    }
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // ---- Mixin ----

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    // Forge 1.20.1 does not ship MixinExtras, NeoForge does. Wrapping a call instead of
    // redirecting it is what keeps us from claiming vanilla call sites other mods need too.
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.3"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.3")) {
        jarJar.ranged(it, "[0.5.3,)")
    }

    // ---- Required ----

    // The only hard dependency, see mods.toml.
    implementation fg.deobf("curse.maven:lootr-361276:5420132")

    // ---- Recipe viewers ----

    implementation fg.deobf("curse.maven:jei-238222:7391695")

    compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}:api")
    //runtimeOnly fg.deobf("dev.emi:emi-forge:${emi_version}")

    // ---- Optional integrations ----

    // FTB Quests will not start without Teams, Library and Architectury.
    implementation fg.deobf("curse.maven:ftb-quests-forge-289412:7608804")
    implementation fg.deobf("curse.maven:ftb-library-forge-404465:7296748")
    implementation fg.deobf("curse.maven:ftb-teams-forge-404468:7499810")
    implementation fg.deobf("curse.maven:architectury-api-419699:5137938")

    implementation fg.deobf("curse.maven:jade-324717:6855440")

    compileOnly fg.deobf("curse.maven:better-combat-by-daedelus-639842:7287334")
    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:5.14.1+1.20.1:api")

    // Script bridges. KubeJS finds its plugin through kubejs.plugins.txt and CraftTweaker scans for
    // @ZenRegister, so nothing here is a hard dependency.
    compileOnly(fg.deobf("dev.latvian.mods:kubejs-forge:2001.6.5-build.26"))
    compileOnly(fg.deobf("dev.latvian.mods:rhino-forge:2001.2.3-build.10"))
    compileOnly(fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.20.1:14.0.60"))

    // ---- Unit tests ----

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Minecraft 1.20.1 brings Gson 2.10, the tests are written against 2.10.1.
    testImplementation 'com.google.code.gson:gson:2.10.1'
}

// Mods pulled in only to reproduce a bug report - Create, KubeJS and the like. They live in
// dev-deps.gradle, which is not in the repo, so a clean checkout and the build server never
// download them and a release never depends on CurseForge being up. docs/forge-dev-setup/ holds
// the copy to restore the file from.
if (file("dev-deps.gradle").exists()) {
    apply from: "dev-deps.gradle"
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    // The jar without MixinExtras inside; jarJar below is what ships. Kept out of build/libs so
    // the workflows, which upload everything there, still find exactly one jar.
    archiveClassifier = 'slim'
    destinationDirectory = layout.buildDirectory.dir('devlibs')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'            : "historystages.mixins.json"
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.named('jarJar').configure {
    archiveClassifier = ''
    manifest.from(tasks.jar.manifest)
    finalizedBy 'reobfJarJar'
}

reobf {
    jarJar {}
}

mixin {
    add sourceSets.main, "historystages.refmap.json"
    config "historystages.mixins.json"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test', Test) {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    // The lock benchmark is an instrument, not a test: half a million iterations per
    // measurement turn a three-second suite into thirty-five. Off by default, on with -Pbench.
    systemProperty 'historystages.bench', project.hasProperty('bench') ? 'true' : 'false'
}
